--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 background-size: cover;
                 font-family: 'Lato';
                 color: rgb(125, 94, 68);
-                padding: 20px;
+                padding: 25px;
             }
             h1 {
                 color: rgb(222, 84, 84);
@@ -109,7 +109,7 @@
             
             .splash-bg {
                 position: absolute;
-                background: url("http://feelgrafix.com/data_images/out/16/907950-triangle-wallpaper.jpg") fixed no-repeat;
+                background: url("https://static.vecteezy.com/system/resources/previews/000/136/250/non_2x/rhinestone-abstract-background-vector.jpg") fixed no-repeat;
                 width: 100%;
                 height: 100%;
                 margin-top: -100px;
@@ -156,7 +156,6 @@
     <body>
         <div class="splash">
             <div class = "splash-bg"></div>
-            <img class = "spash-icon" src="https://www.khanacademy.org/computer-programming/new-chester-banks-logo/4829043342311424/5639274879778816.png">
             <button class = "splash-btn">YUP</button>
         </div>
         
