--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
             .splash-bg {
                 position: absolute;
                 background: url("https://static.vecteezy.com/system/resources/previews/000/136/250/non_2x/rhinestone-abstract-background-vector.jpg") fixed no-repeat;
-                width: 100%;
-                height: 100%;
+                width: window.innerWidth;
+                height: window.innerHeight;
                 margin-top: -100px;
-                margin-left: -10px;
-                -webkit-filter: contrast(60%) sepia(30%) blur(2px);
+                margin-left: -100px;
+                -webkit-filter: blur(2px);
                 z-index: -1;
             }
             .splash-icon {
