--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <body>
         <div class="splash">
             <div class = "splash-bg"></div>
-            <button class = "splash-btn">YUP</button>
+            <button class = "splash-btn">PERFECT</button>
         </div>
         
         <div class="title">
