--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 background-repeat: no-repeat;
                 background-size: cover;
                 
-                -webkit-filter: blur(2px);
-                z-index: -1;
+                /*-webkit-filter: blur(2px);
+                z-index: -1;*/
             }
             .splash-icon {
                 margin-left: width/2;
