--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <style>
             body, html {
                 height: 100%;
+                margin: 0;
             }
             body {
                 background: rgb(227, 218, 214);
