--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
             
             .splash {
-                margin: 0;
+                margin: -50px;
                 padding: 0;
 
                 /* The image used */
