--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
             
             .splash {
-                margin: -50px;
+                margin: -80px;
                 padding: 0;
 
                 /* The image used */
@@ -39,6 +39,7 @@
                 font-size: 100px;
                 text-align: center;
 
+                padding-top: 100px;
                 color: white;
             }
 
