--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Chester Banks</title>
-        <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Oswald' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Oswald|Poppins:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
         
         <style>
@@ -35,11 +35,12 @@
             }
 
             .splash-txt {
-                font-family: 'Oswald';
+                font-family: 'Poppins';
                 font-size: 100px;
                 text-align: center;
 
-                padding-top: 100px;
+                padding-top: 50%;
+                letter-spacing: -7px;
                 color: white;
             }
 
@@ -73,7 +74,7 @@
     </head>
     <body>
         <div class="splash">
-            <h1 class="splash-txt">TASKMONKEY</h1>
+            <h1 class="splash-txt">taskmonkey</h1>
 
             <button class = "splash-btn">Begin</button>
         </div>
