moving center text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 font-size: 100px;
                 text-align: center;
 
-                padding-top: 50%;
+                padding-top: 450px;
                 letter-spacing: -7px;
                 color: white;
             }
