--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             }
             
             .splash {
-                padding: 0;
+                margin-top: -70px;
+
+                padding: 0px;
 
                 /* The image used */
                 background-image: url("https://www.stockvault.net/data/2018/04/26/251903/preview16.jpg");
