messing with input

--- a/index.html
+++ b/index.html
@@ -78,11 +78,16 @@
             }
 
             .title {
-                padding: 10px;
+                font-family: Poppins;
+                color: rgb(50, 50, 50);
                 font-size: 30px;
-                
+
+                display: block;
+                padding: 15px;
                 margin-left: auto;
                 margin-right: auto;
+
+                border-radius: 10px;
             }
         </style>
     </head>
