--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 
                 border-radius: 10px;
             }
+            .title-btn {
+                margin-top: 100px;
+            }
         </style>
     </head>
     <body>
