--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
 
 
-        <h1 id = "title-txt"></h1>
+        <h1 id = "title-txt">tEST?</h1>
 
         <div class="enter-title">
             <h3 class="prompt-txt">enter your title</h3>
