--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
         <div class="enter-title">
             <h3 class="prompt-txt">enter your title</h3>
-            <input class = "title" id = "title-input" type="text">
+
+            <label>title<input id = "title-input" class = "title" type="text"></label>
 
             <button id = "title-btn" class = "title-btn">Next</button>
         </div>
