--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           
       var onButtonClick = function() {
           var greeting = "Heyaz, " + name;
-        document.getElementById("title-txt").textContent += greeting;  
+        document.getElementById("title-txt").value += greeting;  
       };
       // Step 3: Attach event listener to element
       button.addEventListener("click", onButtonClick);
