--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       var name = document.getElementById("title-input").value;
           
       var onButtonClick = function() {
-          var greeting = "Heyaz, " + name;
-        document.getElementById("title-txt").value += greeting;  
+          var greeting = "Hiya, " + name;
+        document.getElementById("title-txt").textContent += greeting;  
       };
       // Step 3: Attach event listener to element
       button.addEventListener("click", onButtonClick);
