--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       // Step 1: Find the element we want the event on
       var button = document.getElementById("title-btn");
       // Step 2: Define the event listener function
-      var name = document.getElementById("title-input").value;
+      var name = "test" + document.getElementById("title-input");
           
       var onButtonClick = function() {
           var greeting = "Hiya, " + name;
