--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
             }
 
             #title-txt {
+                position: absolute;
+
                 font-size: 100px;
+                text-align: center;
 
                 padding-top: 100px;
                 margin:0px;
@@ -86,8 +89,6 @@
 
             .title {
                 font-family: Poppins;
-                text-align: center;
-
                 color: rgb(50, 50, 50);
                 font-size: 30px;
 
@@ -107,7 +108,6 @@
         </style>
     </head>
     <body>
-
 
         <h1 id = "title-txt"></h1>
 
