--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script>
+        var minus = 0;
 
         /* When to hide / show pages */
         $(".splash").show();
@@ -287,8 +288,11 @@
 
         /* [ENTER TASKS PAGE] Add row button, yeah a bit of a mess*/
         $(".new-row-btn").click(function (){
+            minus -= 20;
+
             var newRow = $('<tr><td><select><option value="calc">Calculus AB</option><option value="eng">English II</option><option value="span">Spanish III</option><option value="other">Other</option></select></td><td><input class = "task-input-name" type="text"></td><td><select><option value="all">All</option><option value="mon">Monday</option><option value="tue">Tuesday</option><option value="wed">Wednesday</option><option value="thu">Thursday</option><option value="fri">Friday</option></select></td></tr>');
             $("table").append(newRow);
+            $(".prompt-txt").css("padding-top", 270 + minus);
         });
     </script>
 </html>
