--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
                 width: 230px;
             }
 
+            .new-row-btn {
+                width: 900px;
+            }
+
             /* Finished schedule styling */
             #title-txt {
                 position: absolute;
@@ -288,7 +292,7 @@
 
         /* [ENTER TASKS PAGE] Add row button, yeah a bit of a mess*/
         $(".new-row-btn").click(function (){
-            if(minus < 200){
+            if(minus < 150){
                 minus += 45;
             } else {
                 minus += 22.5;
