--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
     </head>
     <body>
 
+        <button class = "bg-btn">Change background</button>
+
         <div class="splash">
             <h1 class="splash-txt">taskhippo</h1>
 
