--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
                 letter-spacing: -7px;
                 color: black;
             } 
+
+            .bg-btn {
+                position: absolute;
+                padding-top: 100px;
+            }
         </style>
     </head>
     <body>
@@ -307,6 +312,9 @@
             var newRow = $('<tr><td><select><option value="calc">Calculus AB</option><option value="eng">English II</option><option value="span">Spanish III</option><option value="other">Other</option></select></td><td><input class = "task-input-name" type="text"></td><td><select><option value="all">All</option><option value="mon">Monday</option><option value="tue">Tuesday</option><option value="wed">Wednesday</option><option value="thu">Thursday</option><option value="fri">Friday</option></select></td></tr>');
             $("table").append(newRow);
             $(".prompt-txt").css("padding-top", 270 - minus);
+        });
+
+        $(".bg-btn").click(function (){
         });
     </script>
 </html>
