--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                 position: absolute;
                 margin-top: 100px;
             }
+            .bg-btn:active {
+                margin-top: 105px;
+            }
         </style>
     </head>
     <body>
@@ -318,6 +321,7 @@
         var bg = 0;
 
         $(".bg-btn").click(function (){
+            bg ++;
         });
     </script>
 </html>
