--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
         $(".bg-btn").click(function (){
             bg ++;
-            $("body").css("background-image", 'url(' + '"https://wallpaper-gallery.net/images/pink-and-orange-background/pink-and-orange-background-10.jpg"' + ')')
+            $("body").css("background-image", 'url(' + backgrounds[0] + ')')
         });
     </script>
 </html>
