--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
         $(".bg-btn").click(function (){
             bg ++;
-            $("body").css("background-image", 'url(' + backgrounds[0] + ')')
+            $("body").css("background-image", 'url(' + backgrounds[bg] + ')')
         });
     </script>
 </html>
