--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             } 
 
             .bg-btn {
+                margin-left: auto; margin-right: auto;
                 position: absolute;
                 margin-top: 100px;
             }
@@ -322,7 +323,7 @@
 
         $(".bg-btn").click(function (){
             bg ++;
-            $("body").css("background-image", 'url(' + backgrounds[bg] + ')')
+            $("body").css("background-image", 'url(' + backgrounds[1] + ')')
         });
     </script>
 </html>
