New change! :sparkles:

--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
             } 
 
             .bg-btn {
-                margin-left: 40%;
+                margin-top: 95%;
+                margin-left: 10%;
                 position: absolute;
-                margin-top: 100px;
+                font-size: 20px;
+                width: 212px;
             }
             .bg-btn:active {
                 margin-top: 105px;
@@ -160,6 +162,8 @@
         <button class = "bg-btn">Change background</button>
 
         <div class="splash">
+            <img src = "file:///C:/Users/garthadams/Desktop/world-record.png">
+
             <h1 class="splash-txt">taskmonkey</h1>
 
             <button class = "splash-btn">Get started!</button>
