Testing local image :thought_balloon:

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             } 
 
             .bg-btn {
-                margin-top: 95%;
+                margin-top: 75%;
                 margin-left: 10%;
                 position: absolute;
                 font-size: 20px;
@@ -155,6 +155,11 @@
             .bg-btn:active {
                 margin-top: 105px;
             }
+
+            img {
+                width: 100px;
+                height: 100px;
+            }
         </style>
     </head>
     <body>
@@ -162,7 +167,7 @@
         <button class = "bg-btn">Change background</button>
 
         <div class="splash">
-            <img src = "file:///C:/Users/garthadams/Desktop/world-record.png">
+            <img src="file:///C:/Users/garthadams/Desktop/world-record.png">
 
             <h1 class="splash-txt">taskmonkey</h1>
 
