--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
             }
 
             img {
-                width: 100px;
-                height: 100px;
+                margin-left: 250px;
+                margin-top: 250px;
+                width: 200px;
+                height: 200px;
             }
         </style>
     </head>
