--- a/index.html
+++ b/index.html
@@ -133,34 +133,23 @@
 
             /* Finished schedule styling */
             #title-txt {
-                position: absolute;
-
                 font-size: 100px;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 100px;
-
-                padding-top: 100px;
                 letter-spacing: -7px;
                 color: black;
+
+                text-align: center;
+                margin-top: 100px;
+                padding-top: 100px;
             } 
 
             .bg-btn {
                 position: absolute;
-                margin-top: 50%;
-                margin-left: 10%;
+                margin: 100px 10px 10px 10px;
                 font-size: 20px;
                 width: 212px;
             }
             .bg-btn:active {
                 margin-top: 105px;
-            }
-
-            img {
-                margin-left: 250px;
-                margin-top: 250px;
-                width: 200px;
-                height: 200px;
             }
         </style>
     </head>
@@ -169,8 +158,6 @@
         <button class = "bg-btn">Change background</button>
 
         <div class="splash">
-            <img src="file:///C:/Users/garthadams/Desktop/world-record.png">
-
             <h1 class="splash-txt">taskmonkey</h1>
 
             <button class = "splash-btn">Get started!</button>
