--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
 
             .bg-btn {
                 position: absolute;
-                margin: 100px 10px 10px 10px;
+                margin: 10px;
                 font-size: 20px;
                 width: 212px;
             }
             .bg-btn:active {
-                margin-top: 105px;
+                margin-top: 15px;
             }
         </style>
     </head>
