--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         <button class = "bg-btn">Change background</button>
 
         <div class="splash">
+            <img src = "https://media.discordapp.net/attachments/324321229022560259/483636186255065088/monkey_logo.png?width=593&height=593">
+
             <h1 class="splash-txt">taskmonkey</h1>
 
             <button class = "splash-btn">Get started!</button>
