--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                 box-shadow: inset 0px 0px 6px rgba(0, 0, 0, 0.3);
             }
 
+            .monkey-logo {
+                position: absolute;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 150px;
+            }
+
             /* Enter Title page styling */
 
             .prompt-txt {
@@ -158,7 +165,7 @@
         <button class = "bg-btn">Change background</button>
 
         <div class="splash">
-            <img src = "https://media.discordapp.net/attachments/324321229022560259/483636186255065088/monkey_logo.png?width=593&height=593">
+            <img class = "monkey-logo" src = "https://media.discordapp.net/attachments/324321229022560259/483636186255065088/monkey_logo.png?width=593&height=593">
 
             <h1 class="splash-txt">taskmonkey</h1>
 
