--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
             }
 
             .monkey-logo {
+                width: 100px; height: 100px;
+
                 position: absolute;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 150px;
+                margin-left: 50%;
+                margin-right: 50%;
+                margin-top: 100px;
             }
 
             /* Enter Title page styling */
